--- a/utility-css.styl
+++ b/utility-css.styl
@@ -1,2 +1,5 @@
 @import './src/_setting'
 @import './node_modules/stylus-helpers/helper'
+
+@import './src/utilities/align'
+@import './src/utilities/borders'
