ファイルと方向性の整理

--- a/utility-css.styl
+++ b/utility-css.styl
@@ -1,5 +1,7 @@
 @import './src/_setting'
 @import './node_modules/stylus-helpers/helper'
 
-@import './src/utilities/align'
-@import './src/utilities/borders'
+@import './src/utilities/border'
+@import './src/utilities/br'
+@import './src/utilities/clearfix'
+@import './src/utilities/vertical-align'
