久々だったのでやりたいことがまとまった感じ

--- a/src/utilities/clearfix.styl
+++ b/src/utilities/clearfix.styl
@@ -1,5 +1,35 @@
-.ut-cf
+.{_utPrefix}-cf
   &::after
-    display: block;
-    clear: both;
-    content: "";
+    display block
+    clear both
+    content ""
+  &-xs
+    +xs()
+      &::after
+        display block
+        clear both
+        content ""
+  &-sm
+    +sm()
+      &::after
+        display block
+        clear both
+        content ""
+  &-md
+    +md()
+      &::after
+        display block
+        clear both
+        content ""
+  &-lg
+    +lg()
+      &::after
+        display block
+        clear both
+        content ""
+  &-xl
+    +xl()
+      &::after
+        display block
+        clear both
+        content ""
