--- a/utility-css.styl
+++ b/utility-css.styl
@@ -1,7 +1,4 @@
 @import './src/_setting'
 @import './node_modules/stylus-helpers/helper'
 
-@import './src/utilities/border'
-@import './src/utilities/br'
-@import './src/utilities/clearfix'
-@import './src/utilities/vertical-align'
+@import './src/utilities/*'
