修正とアイテムの追加

--- a/src/utilities/margin.styl
+++ b/src/utilities/margin.styl
@@ -1,6 +1,8 @@
 for i in -4..20
   .{_utPrefix}-m{i * 5}
     m i * 5
+  .{_utPrefix}-mt{i * 5}
+    mt i * 5
   .{_utPrefix}-mr{i * 5}
     mr i * 5
   .{_utPrefix}-mb{i * 5}
@@ -14,6 +16,8 @@ for i in -4..20
 
   .{_utPrefix}-m{i * 5}-xs
     m-xs i * 5
+  .{_utPrefix}-mt{i * 5}-xs
+    mt-xs i * 5
   .{_utPrefix}-mr{i * 5}-xs
     mr-xs i * 5
   .{_utPrefix}-mb{i * 5}-xs
@@ -27,6 +31,8 @@ for i in -4..20
 
   .{_utPrefix}-m{i * 5}-sm
     m-sm i * 5
+  .{_utPrefix}-mt{i * 5}-sm
+    mt-sm i * 5
   .{_utPrefix}-mr{i * 5}-sm
     mr-sm i * 5
   .{_utPrefix}-mb{i * 5}-sm
@@ -40,6 +46,8 @@ for i in -4..20
 
   .{_utPrefix}-m{i * 5}-md
     m-md i * 5
+  .{_utPrefix}-mt{i * 5}-md
+    mt-md i * 5
   .{_utPrefix}-mr{i * 5}-md
     mr-md i * 5
   .{_utPrefix}-mb{i * 5}-md
@@ -53,6 +61,8 @@ for i in -4..20
 
   .{_utPrefix}-m{i * 5}-lg
     m-lg i * 5
+  .{_utPrefix}-mt{i * 5}-lg
+    mt-lg i * 5
   .{_utPrefix}-mr{i * 5}-lg
     mr-lg i * 5
   .{_utPrefix}-mb{i * 5}-lg
@@ -67,6 +77,8 @@ for i in -4..20
 
   .{_utPrefix}-m{i * 5}-xl
     m-xl i * 5
+  .{_utPrefix}-mt{i * 5}-xl
+    mt-xl i * 5
   .{_utPrefix}-mr{i * 5}-xl
     mr-xl i * 5
   .{_utPrefix}-mb{i * 5}-xl
