--- a/utility-css.styl
+++ b/utility-css.styl
@@ -1,1 +1,4 @@
-@import './node_modules/stylus-helpers/helper.styl'
+@import './src/_setting'
+@import './node_modules/stylus-helpers/helper'
+
+@import './src/utilities/*'
